try to add repo name add "homepage" property

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://bsrisompong.github.io",
+  "homepage": "http://bsrisompong.github.io/hint-showcase",
   "name": "hint-showcase",
   "version": "0.1.0",
   "private": true,
