--- a/package.json
+++ b/package.json
@@ -4,13 +4,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@nivo/core": "^0.67.0",
+    "@nivo/line": "^0.67.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "emoji-dictionary": "^1.0.11",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.14.0",
     "react-scripts": "4.0.1",
+    "react-scroll-section": "^3.0.2",
+    "react-sky": "^1.1.0",
+    "styled-components": "^5.2.1",
     "use-google-spreadsheet": "^0.4.2",
     "web-vitals": "^0.2.4"
   },
