--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.14.0",
+    "react-reveal": "^1.2.2",
     "react-scripts": "4.0.1",
     "react-scroll-section": "^3.0.2",
     "react-sky": "^1.1.0",
