--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.1",
     "emoji-dictionary": "^1.0.11",
     "lodash": "^4.17.20",
+    "normalize.css": "^8.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.14.0",
@@ -21,6 +22,7 @@
     "react-sky": "^1.1.0",
     "styled-components": "^5.2.1",
     "use-google-spreadsheet": "^0.4.2",
+    "useripple": "^1.0.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -50,6 +52,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0"
+    "gh-pages": "^3.1.0",
+    "postcss-normalize": "^9.0.0"
   }
 }
