--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "normalize.css": "^8.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-hook-form": "^6.14.0",
+    "react-floaterjs": "^1.0.6",
+    "react-hook-form": "^6.14.1",
     "react-reveal": "^1.2.2",
     "react-scripts": "4.0.1",
     "react-scroll-section": "^3.0.2",
     "react-sky": "^1.1.0",
+    "react-use": "^15.3.8",
     "styled-components": "^5.2.1",
     "use-google-spreadsheet": "^0.4.2",
     "useripple": "^1.0.3",
