--- a/package.json
+++ b/package.json
@@ -6,25 +6,33 @@
   "dependencies": {
     "@nivo/core": "<=0.64.0",
     "@nivo/line": "<=0.64.0",
+    "@nivo/radar": "<=0.64.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "emoji-dictionary": "^1.0.11",
     "lodash": "^4.17.20",
+    "moment": "^2.29.1",
     "normalize.css": "^8.0.1",
     "react": "^17.0.1",
+    "react-contenteditable": "^3.3.5",
     "react-dom": "^17.0.1",
     "react-floaterjs": "^1.0.6",
     "react-hook-form": "^6.14.1",
+    "react-modal": "^3.12.1",
     "react-reveal": "^1.2.2",
     "react-scripts": "4.0.1",
     "react-scroll-section": "^3.0.2",
     "react-sky": "^1.1.0",
+    "react-transition-group": "^4.4.1",
     "react-use": "^15.3.8",
+    "rodal": "^1.8.1",
+    "short-uuid": "^4.1.0",
     "styled-components": "^5.2.1",
     "use-google-spreadsheet": "^0.4.2",
     "useripple": "^1.0.3",
+    "uuid": "^8.3.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
