--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@nivo/bar": "0.64.0",
     "@nivo/core": "<=0.64.0",
     "@nivo/line": "<=0.64.0",
     "@nivo/radar": "<=0.64.0",
